--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,12 @@
     <dimen name="act_movie_data_heading_font_size">24sp</dimen>
     <dimen name="act_movie_data_text_font_size">16sp</dimen>
     <dimen name="act_movie_data_text_padding">12dp</dimen>
+    <dimen name="act_movie_data_text_paddingLeft">12dp</dimen>
+    <dimen name="act_movie_data_text_paddingRight">12dp</dimen>
 
     <dimen name="act_movie_data_trailer_poster_w">200dp</dimen>
     <dimen name="act_movie_data_trailer_icon_size">32dp</dimen>
+    <dimen name="act_movie_data_trailert_font_size">20sp</dimen>
 
     <dimen name="act_movie_data_favorite_button_w">120dp</dimen>
     <dimen name="act_movie_data_favorite_button_h">60dp</dimen>
