--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,25 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <style name="MovieDetailsGeneralStyle" parent="AppTheme">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">@dimen/act_movie_data_text_paddingLeft</item>
+        <item name="android:paddingRight">@dimen/act_movie_data_text_paddingRight</item>
+    </style>
+
+    <style name="MovieDetailsLabelStyle" parent="MovieDetailsGeneralStyle">
+        <item name="android:textSize">@dimen/act_movie_data_heading_font_size</item>
+    </style>
+    <style name="MovieDetailsBodyStyle" parent="MovieDetailsGeneralStyle">
+        <item name="android:textSize">@dimen/act_movie_data_text_font_size</item>
+    </style>
+
+    <style name="MovieDetailsTrailerListStyle" parent="AppTheme">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/act_movie_data_heading_font_size</item>
+    </style>
+
 </resources>
