--- a/app/src/main/res/layout/movie_data_details_include_auxinfo_items.xml
+++ b/app/src/main/res/layout/movie_data_details_include_auxinfo_items.xml
@@ -8,13 +8,8 @@
 
     <TextView
         android:id="@+id/act_movie_data_release_date_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/act_movie_data_text_padding"
-        android:paddingRight="@dimen/act_movie_data_text_padding"
-        android:paddingTop="@dimen/act_movie_data_text_padding"
+        style="@style/MovieDetailsLabelStyle"
         android:text="@string/release_date_label"
-        android:textSize="@dimen/act_movie_data_heading_font_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,46 +26,28 @@
 
     <TextView
         android:id="@+id/act_movie_data_average_vote_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/act_movie_data_text_padding"
-        android:paddingRight="@dimen/act_movie_data_text_padding"
-        android:paddingTop="@dimen/act_movie_data_text_padding"
+        style="@style/MovieDetailsLabelStyle"
         android:text="@string/average_vote_label"
-        android:textSize="@dimen/act_movie_data_heading_font_size"
         app:layout_constraintStart_toStartOf="@+id/act_movie_data_release_date_tv"
         app:layout_constraintTop_toBottomOf="@+id/act_movie_data_release_date_tv" />
 
     <TextView
         android:id="@+id/act_movie_data_average_vote_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/act_movie_data_text_padding"
-        android:paddingRight="@dimen/act_movie_data_text_padding"
-        android:textSize="@dimen/act_movie_data_text_font_size"
+        style="@style/MovieDetailsBodyStyle"
         app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_label"
         app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_label"
         tools:text="@string/tools_movie_vote_average" />
 
     <TextView
         android:id="@+id/act_movie_data_duration_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/act_movie_data_text_padding"
-        android:paddingRight="@dimen/act_movie_data_text_padding"
-        android:paddingTop="@dimen/act_movie_data_text_padding"
+        style="@style/MovieDetailsLabelStyle"
         android:text="@string/duration_label"
-        android:textSize="@dimen/act_movie_data_heading_font_size"
         app:layout_constraintStart_toStartOf="@+id/act_movie_data_average_vote_tv"
         app:layout_constraintTop_toBottomOf="@+id/act_movie_data_average_vote_tv" />
 
     <TextView
         android:id="@+id/act_movie_data_duration_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/act_movie_data_text_padding"
-        android:paddingRight="@dimen/act_movie_data_text_padding"
-        android:textSize="@dimen/act_movie_data_text_font_size"
+        style="@style/MovieDetailsBodyStyle"
         app:layout_constraintStart_toStartOf="@+id/act_movie_data_duration_label"
         app:layout_constraintTop_toBottomOf="@+id/act_movie_data_duration_label"
         tools:text="@string/tools_movie_duration" />
