--- a/app/src/main/res/layout/movie_data_trailers_items.xml
+++ b/app/src/main/res/layout/movie_data_trailers_items.xml
@@ -11,9 +11,7 @@
 
     <TextView
         android:id="@+id/movie_trailer_title_tv"
-        android:textSize="@dimen/act_movie_data_heading_font_size"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        style="@style/MovieDetailsTrailerListStyle" />
 
 
 
