--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="act_movie_data_heading_font_size">16sp</dimen>
-    <dimen name="act_movie_data_text_font_size">14sp</dimen>
-    <dimen name="act_movie_data_text_padding">6dp</dimen>
+
+    <dimen name="act_movie_data_text_paddingTop">6dp</dimen>
     <dimen name="act_movie_data_text_paddingLeft">6dp</dimen>
-    <dimen name="act_movie_data_text_paddingRight">6dp</dimen>
+    <dimen name="act_movie_data_text_paddingRight">@dimen/act_movie_data_text_paddingTop</dimen>
     <dimen name="act_movie_data_body_text_paddingLeft">16dp</dimen>
-    <dimen name="act_movie_data_body_text_paddingRight">16dp</dimen>
+    <dimen name="act_movie_data_body_text_paddingRight">@dimen/act_movie_data_body_text_paddingLeft</dimen>
 
     <dimen name="act_movie_data_trailer_poster_w">180dp</dimen>
-    <dimen name="act_movie_data_trailer_icon_size">24dp</dimen>
-    <dimen name="act_movie_data_trailer_font_size">18sp</dimen>
+    <dimen name="act_movie_data_trailer_icon_size">20dp</dimen>
+
+
     <dimen name="act_movie_data_trailer_list_padding">2dp</dimen>
     <dimen name="act_movie_data_trailer_text_paddingLeft">4dp</dimen>
-    <dimen name="act_movie_data_trailer_text_paddingRight">4dp</dimen>
+    <dimen name="act_movie_data_trailer_text_paddingRight">@dimen/act_movie_data_trailer_text_paddingLeft</dimen>
 
     <dimen name="act_movie_data_favorite_button_w">140dp</dimen>
     <dimen name="act_movie_data_favorite_button_h">80dp</dimen>
 
     <dimen name="act_main_progressbar_dimen">64dp</dimen>
+
+    <dimen name="act_movie_data_recyclerView_paddingTop">6dp</dimen>
+
+    <!-- fonts size -->
+    <dimen name="act_movie_data_heading_font_size">16sp</dimen>
+    <dimen name="act_movie_data_text_font_size">14sp</dimen>
+    <dimen name="act_movie_data_trailer_font_size">14sp</dimen>
 
 </resources>
