--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,11 +29,18 @@
     <style name="MovieDetailsLabelStyle" parent="MovieDetailsGeneralStyle">
         <item name="android:textSize">@dimen/act_movie_data_heading_font_size</item>
     </style>
+
+    <style name="MovieDetailsLabelStyle2" parent="MovieDetailsLabelStyle">
+        <item name="android:paddingTop">@dimen/act_movie_data_text_paddingTop</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="MovieDetailsBodyStyle" parent="MovieDetailsGeneralStyle">
         <item name="android:textSize">@dimen/act_movie_data_text_font_size</item>
         <item name="android:paddingLeft">@dimen/act_movie_data_body_text_paddingLeft</item>
         <item name="android:paddingRight">@dimen/act_movie_data_body_text_paddingRight</item>
     </style>
+
 
     <style name="MovieDetailsTrailerListStyle" parent="MovieDetailsGeneralStyle">
         <item name="android:paddingLeft">@dimen/act_movie_data_trailer_text_paddingLeft</item>
