resources adjustments for movie title
Signed-off-by: lsitec333.asato <andre.shoji@lsitec.org.br>

--- a/app/src/main/res/layout/activity_movie_data.xml
+++ b/app/src/main/res/layout/activity_movie_data.xml
@@ -11,8 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_movies_trailer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/act_movie_data_recyclerView_paddingTop" />
+        android:layout_height="wrap_content" />
 
 
 </ScrollView>
