--- a/app/src/main/res/layout/movie_data_details_include_primary_info_items.xml
+++ b/app/src/main/res/layout/movie_data_details_include_primary_info_items.xml
@@ -26,10 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/act_movie_data_poster_image_view"
-        app:layout_constraintTop_toTopOf="@+id/act_movie_data_poster_image_view"
-        app:layout_constraintBottom_toBottomOf="@+id/act_movie_data_poster_image_view" >
-
-    </include>
+        app:layout_constraintTop_toTopOf="@+id/act_movie_data_poster_image_view" />
 </android.support.constraint.ConstraintLayout>
 
 
