--- a/app/src/main/res/layout/movie_data_trailers_items.xml
+++ b/app/src/main/res/layout/movie_data_trailers_items.xml
@@ -4,15 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_gravity="start"
+    android:background="@drawable/movie_trailer_list_selector"
+    android:layout_marginStart="@dimen/act_movie_data_body_text_paddingLeft"
+    android:layout_marginEnd="@dimen/act_movie_data_body_text_paddingRight"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
+
 
     <ImageView
         android:id="@+id/movie_trailer_icon_image_view"
         android:layout_width="@dimen/act_movie_data_trailer_icon_size"
         android:layout_height="@dimen/act_movie_data_trailer_icon_size"
         android:background="@drawable/ic_play_button"
-        android:layout_marginLeft="@dimen/act_movie_data_body_text_paddingLeft"
         app:layout_constraintBottom_toBottomOf="@+id/movie_trailer_title_tv"
         app:layout_constraintTop_toTopOf="@+id/movie_trailer_title_tv"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +25,6 @@
     <TextView
         android:id="@+id/movie_trailer_title_tv"
         style="@style/MovieDetailsTrailerListStyle"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/movie_trailer_icon_image_view"
         tools:text="@string/tools_trailer_tile" />
